--- a/chart/pixelaw-core/Chart.yaml
+++ b/chart/pixelaw-core/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: pixelaw
+name: pixelaw-core
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
