--- a/chart/pixelaw-core/values.yaml
+++ b/chart/pixelaw-core/values.yaml
@@ -1,5 +1,5 @@
 projectName: pixelaw
-nameSpace: dev
+nameSpace: main
 appType:
   frontend: webapp
   database: db
@@ -31,9 +31,9 @@ grpcToriiContainerService:
 domainName: pixelaw.xyz                # {{ .Values.domainName }}
 
 subDomainName: 
-  pixelaw: demo                     # {{ .Values.subDomainName.pixelaw }}
-  katana: katana.demo           # {{ .Values.subDomainName.katana }}
-  torii: torii.demo             # {{ .Values.subDomainName.torii }}
-  grpcTorii: grpc.demo    # {{ .Values.subDomainName.grpcTorii }}
+  pixelaw: demo.core                     # {{ .Values.subDomainName.pixelaw }}
+  katana: katana.core.demo           # {{ .Values.subDomainName.katana }}
+  torii: torii.core.demo             # {{ .Values.subDomainName.torii }}
+  grpcTorii: grpc.core.demo    # {{ .Values.subDomainName.grpcTorii }}
 
-dockerImage: oostvoort/pixelaw-dev:latest
+dockerImage: oostvoort/pixelaw-core:latest
