--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -155,13 +155,16 @@ jobs:
           ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
           ARGOCD_AUTH_TOKEN: ${{ secrets.ARGOCD_AUTH_TOKEN }}   
         run: |
-          argocd app create $PROJECTNAME \
-          --repo https://github.com/$GITHUB_REPOSITORY.git \
-          --revision $GITHUB_REF_NAME --path ./chart/$PROJECTNAME \
-          --values values.yaml \
-          --dest-namespace $PROJECTNAME \
-          --dest-server https://kubernetes.default.svc \
-          --upsert
-          argocd app sync $PROJECTNAME
-          argocd app wait $PROJECTNAME
-          argocd app actions run $PROJECTNAME --namespace $PROJECTNAME restart --kind Deployment 
+            argocd app create $PROJECTNAME \
+                --repo https://pixelaw.github.io/core/ \
+                --path chart/  \
+                --revision ${VERSION:1} \
+                --helm-chart $PROJECTNAME \
+                --dest-namespace $PROJECTNAME-main \
+                --dest-server https://kubernetes.default.svc \
+                --helm-set-string dockerImage=$REGISTRY/$PROJECTNAME:${VERSION} \
+                --upsert \
+                --server $ARGOCD_SERVER \
+                --auth-token $ARGOCD_AUTH_TOKEN 
+            argocd app sync $PROJECTNAME
+            argocd app wait $PROJECTNAME
