--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.0.0",
     "@types/lodash": "^4.14.200",
     "@types/react-color": "^3.0.7",
