chore: update keiko

--- a/bots/.env.example
+++ b/bots/.env.example
@@ -15,6 +15,6 @@ WORLD_HEIGHT=256
 QUEUE_BOT_REFRESH_RATE=1000
 
 # Project Configuration
-TORII_URI=http://0.0.0.0:8080/graphql
-RPC_URL=http://0.0.0.0:5050
+PUBLIC_TORII=http://0.0.0.0:8080
+PUBLIC_NODE_URL=http://0.0.0.0:5050
 API_URL=http://0.0.0.0:3000
