--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "events": "^3.3.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "graphql-ws": "^5.14.2",
     "jotai": "^2.4.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.288.0",
