fix: delete entity

--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -8,7 +8,7 @@ homepage = "https://github.com/pixelaw/contracts"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v0.3.10" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v0.3.15" }
 
 [[target.dojo]]
 build-external-contracts = []
@@ -35,6 +35,7 @@ put_color_2 = "./scripts/put_color_2.sh"
 spawn_rps_2 = "./scripts/spawn_rps_2.sh"
 update_accounts = "./scripts/update_accounts.sh"
 upload_manifest = "bash ./scripts/upload_manifest.sh"
+update_scarb = "bash ./scripts/update_scarb.sh"
 
 [tool.dojo.env]
 rpc_url = "http://localhost:5050/"
