apply fix for auto scaling and add resource limits

--- a/chart/pixelaw-core/templates/deployment.yaml
+++ b/chart/pixelaw-core/templates/deployment.yaml
@@ -34,4 +34,11 @@ spec:
         - name: SEED
           value: "17885659508068513399"           
         - name: TOTAL_ACCOUNTS
-          value: "4"           
+          value: "4"              
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "500m" 
+          limits:
+            memory: "1Gi"
+            cpu: "1000m" 
