--- a/bots/package.json
+++ b/bots/package.json
@@ -16,8 +16,11 @@
     "fs": "^0.0.1-security",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "graphql-transport-ws": "^1.9.0",
+    "graphql-ws": "^5.14.2",
     "pngjs": "^7.0.0",
-    "starknet": "^5.19.5"
+    "starknet": "^5.19.5",
+    "ws": "^8.15.0"
   },
   "devDependencies": {
     "@types/node": "^20.7.0",
