--- a/chart/pixelaw-core/templates/deployment.yaml
+++ b/chart/pixelaw-core/templates/deployment.yaml
@@ -35,10 +35,10 @@ spec:
           value: "17885659508068513399"           
         - name: TOTAL_ACCOUNTS
           value: "4"              
-        resources:
-          requests:
-            memory: "512Mi"
-            cpu: "500m" 
-          limits:
-            memory: "1Gi"
-            cpu: "1000m" 
+        # resources:
+        #   requests:
+        #     memory: "512Mi"
+        #     cpu: "500m" 
+        #   limits:
+        #     memory: "1Gi"
+        #     cpu: "1000m" 
