--- a/chart/pixelaw-core/templates/pvc.yaml
+++ b/chart/pixelaw-core/templates/pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.app }}-pvc
+  namespace: {{ .Values.projectName }}-{{ .Values.nameSpace }} 
 spec:
   storageClassName: do-block-storage  
   accessModes:
