Add World Address ENV

--- a/chart/pixelaw-core/templates/deployment.yaml
+++ b/chart/pixelaw-core/templates/deployment.yaml
@@ -35,6 +35,8 @@ spec:
           value: "17885659508068513399"           
         - name: TOTAL_ACCOUNTS
           value: "4"       
+        - name: WORLD_ADDRESS
+          value: "0x6395ccab8983e6598b8d54bac18cadb63d04b8e4631bde418a2cfb504b59a89"
                  
         # resources:
         #   requests:
@@ -46,7 +48,7 @@ spec:
         volumeMounts:
         - name: keiko-manifests
           mountPath: /keiko/manifests
-          # subPath: prometheus.yml
+
       volumes:
 
       - name: keiko-manifests
