--- a/.github/workflows/demo1.yaml
+++ b/.github/workflows/demo1.yaml
@@ -77,11 +77,11 @@ jobs:
             argocd app create $PROJECTNAME-demo1 \
                 --repo https://pixelaw.github.io/core/ \
                 --path chart/  \
-                --revision ${VERSION:1} \
+                --revision 0.0.33 \
                 --helm-chart $PROJECTNAME \
                 --dest-namespace $PROJECTNAME-demo1 \
                 --dest-server https://kubernetes.default.svc \
-                --helm-set-string dockerImage=$REGISTRY/$PROJECTNAME:${VERSION} \a
+                --helm-set-string dockerImage=$REGISTRY/$PROJECTNAME:v0.0.33 \a
                 --upsert \
                 --server $ARGOCD_SERVER \
                 --auth-token $ARGOCD_AUTH_TOKEN 
