--- a/.github/workflows/demo1.yaml
+++ b/.github/workflows/demo1.yaml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Lint Helm Chart         
         run: |       
-          helm lint --values ./chart/$PROJECTNAME/values.yaml ./chart/$PROJECTNAME                  
+          helm lint --values ./chart/pixelaw-core/values.yaml ./chart/pixelaw-core                  
 
 
   deploy:
@@ -74,16 +74,16 @@ jobs:
           ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
           ARGOCD_AUTH_TOKEN: ${{ secrets.ARGOCD_AUTH_TOKEN }}   
         run: |
-            argocd app create $PROJECTNAME-demo1 \
+            argocd app create pixelaw-core-demo1 \
                 --repo https://pixelaw.github.io/core/ \
                 --path chart/  \
                 --revision ${VERSION:1} \
-                --helm-chart $PROJECTNAME \
-                --dest-namespace $PROJECTNAME-demo1 \
+                --helm-chart pixelaw-core \
+                --dest-namespace pixelaw-core-demo1 \
                 --dest-server https://kubernetes.default.svc \
-                --helm-set-string dockerImage=$REGISTRY/$PROJECTNAME:${VERSION} \
+                --helm-set-string dockerImage=$REGISTRY/pixelaw-core:${VERSION} \
                 --upsert \
                 --server $ARGOCD_SERVER \
                 --auth-token $ARGOCD_AUTH_TOKEN 
-            argocd app sync $PROJECTNAME
-            argocd app wait $PROJECTNAME
+            argocd app sync pixelaw-core
+            argocd app wait pixelaw-core
