--- a/.github/workflows/demo1.yaml
+++ b/.github/workflows/demo1.yaml
@@ -75,11 +75,11 @@ jobs:
             argocd app create pixelaw-core-demo1 \
                 --repo https://pixelaw.github.io/core/ \
                 --path chart/  \
-                --revision ${latestRelease:1} \
+                --revision 0.0.33 \
                 --helm-chart pixelaw-core \
                 --dest-namespace pixelaw-core-demo1 \
                 --dest-server https://kubernetes.default.svc \
-                --helm-set-string dockerImage=$REGISTRY/pixelaw-core:${latestRelease} \
+                --helm-set-string dockerImage=$REGISTRY/pixelaw-core:v0.0.33 \
                 --upsert \
                 --server $ARGOCD_SERVER \
                 --auth-token $ARGOCD_AUTH_TOKEN 
