--- a/chart/pixelaw-core/templates/deployment.yaml
+++ b/chart/pixelaw-core/templates/deployment.yaml
@@ -2,49 +2,49 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }} 
+  name: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }}
   namespace: {{ .Values.projectName }}-{{ .Values.nameSpace }}
   labels:
-    app: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }} 
+    app: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }}
 spec:
   replicas: {{ .Values.replicaSet }}
   selector:
     matchLabels:
-      app: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }} 
+      app: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }}
   template:
     metadata:
       labels:
-        app: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }} 
-    spec: 
+        app: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }}
+    spec:
       containers:
-      - name: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }} 
+      - name: {{ .Values.projectName }}-{{ .Values.nameSpace }}-{{ .Values.appType.frontend }}
         image: {{ .Values.dockerImage }}
         imagePullPolicy: Always
         ports:
-        - containerPort: {{ .Values.webappContainerService.port }}       
+        - containerPort: {{ .Values.webappContainerService.port }}
         env:
         - name: PUBLIC_NODE_URL
-          value: "https://api.cartridge.gg/x/pixelaw/katana"                  
+          value: "https://api.cartridge.gg/x/pixelaw1/katana"
         - name: PUBLIC_TORII
-          value: "https://api.cartridge.gg/x/pixelaw/torii"           
+          value: "https://api.cartridge.gg/x/pixelaw1/torii"
         - name: SLOT_KATANA
-          value: "https://api.cartridge.gg/x/pixelaw/katana"           
+          value: "https://api.cartridge.gg/x/pixelaw1/katana"
         - name: SLOT_TORII
-          value: "https://api.cartridge.gg/x/pixelaw/torii"    
+          value: "https://api.cartridge.gg/x/pixelaw1/torii"
         - name: SEED
-          value: "17885659508068513399"           
+          value: "7380699824140797174"
         - name: TOTAL_ACCOUNTS
-          value: "4"       
+          value: "4"
         - name: WORLD_ADDRESS
-          value: "0x6395ccab8983e6598b8d54bac18cadb63d04b8e4631bde418a2cfb504b59a89"
-                 
+          value: "0x662b50ea51bf4b9b4a72e48d189d11d4224456c06256f0d57d1756d2d909c47"
+
         # resources:
         #   requests:
         #     memory: "512Mi"
-        #     cpu: "500m" 
+        #     cpu: "500m"
         #   limits:
         #     memory: "1Gi"
-        #     cpu: "1000m" 
+        #     cpu: "1000m"
         volumeMounts:
         - name: keiko-manifests
           mountPath: /keiko/manifests
@@ -53,4 +53,4 @@ spec:
 
       - name: keiko-manifests
         persistentVolumeClaim:
-          claimName: pixelaw-core-main--pvc          
+          claimName: pixelaw-core-main--pvc
