--- a/bots/package.json
+++ b/bots/package.json
@@ -1,12 +1,15 @@
 {
   "name": "bots",
-  "version": "1.0.0",
+  "version": "0.0.35",
   "description": "gets queueEvents and processes them",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon index.ts",
-    "selector": "tsx utils/selector.ts"
+    "selector": "tsx utils/selector.ts",
+    "build": "tsc",
+    "lint": "eslint ",
+    "prepublishOnly": "yarn lint && yarn build"
   },
   "dependencies": {
     "@apollo/client": "^3.8.4",
@@ -27,6 +30,7 @@
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "wait-port": "^1.0.4"
+    "wait-port": "^1.0.4",
+    "eslint": "^8.56.0"
   }
 }
