--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-example",
-  "private": true,
-  "version": "0.0.1",
+  "name": "pixelaw-core-web",
+  "private": false,
+  "version": "0.0.38",
   "type": "module",
   "scripts": {
     "dev": "vite",
