--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -1,7 +1,7 @@
 [package]
 cairo-version = "2.4.0"
 name = "pixelaw"
-version = "0.0.43"
+version = "v0.0.44"
 homepage = "https://github.com/pixelaw/core"
 
 [cairo]
