--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixelaw-core-web",
   "private": false,
-  "version": "0.0.43",
+  "version": "v0.0.44",
   "type": "module",
   "scripts": {
     "dev": "vite",
