--- a/deployment/test/Chart.yaml
+++ b/deployment/test/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: pixelaw-core
+name: pixelaw-test
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
