--- a/deployment/demo/templates/deployment.yaml
+++ b/deployment/demo/templates/deployment.yaml
@@ -24,19 +24,19 @@ spec:
         - containerPort: {{ .Values.webappContainerService.port }}
         env:
         - name: PUBLIC_NODE_URL
-          value: "https://api.cartridge.gg/x/pixelaw1/katana"
+          value: "https://api.cartridge.gg/x/pixelaw/katana"
         - name: PUBLIC_TORII
-          value: "https://api.cartridge.gg/x/pixelaw1/torii"
+          value: "https://api.cartridge.gg/x/pixelaw/torii"
         - name: SLOT_KATANA
-          value: "https://api.cartridge.gg/x/pixelaw1/katana"
+          value: "https://api.cartridge.gg/x/pixelaw/katana"
         - name: SLOT_TORII
-          value: "https://api.cartridge.gg/x/pixelaw1/torii"
+          value: "https://api.cartridge.gg/x/pixelaw/torii"
         - name: SEED
-          value: "7380699824140797174"
+          value: "8229730863592727681"
         - name: TOTAL_ACCOUNTS
           value: "4"
         - name: WORLD_ADDRESS
-          value: "0x662b50ea51bf4b9b4a72e48d189d11d4224456c06256f0d57d1756d2d909c47"
+          value: "0x47864d08a1b86cf0dd52ea2785f8bc93b5f48edca8380bbb3057d158521e12d"
 
         # resources:
         #   requests:
