improving release / versioning

--- a/deployment/test/templates/deployment.yaml
+++ b/deployment/test/templates/deployment.yaml
@@ -53,4 +53,4 @@ spec:
 
       - name: keiko-manifests
         persistentVolumeClaim:
-          claimName: pixelaw-core-main--pvc
+          claimName: pixelaw-core-{{ .Values.nameSpace }}-pvc
