--- a/deployment/test/values.yaml
+++ b/deployment/test/values.yaml
@@ -41,3 +41,5 @@ subDomainName:
   grpcTorii: grpc.test    # {{ .Values.subDomainName.grpcTorii }}
 
 dockerImage: ghcr.io/pixelaw/core:latest
+
+worldAddress: "0x47864d08a1b86cf0dd52ea2785f8bc93b5f48edca8380bbb3057d158521e12d"
