--- a/deployment/demo/Chart.yaml
+++ b/deployment/demo/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: pixelaw-core
-description: A Helm chart for Kubernetes
+name: pixelaw-demo
+description: demo.pixelaw.xyz
 
 # A chart can be either an 'application' or a 'library' chart.
 #
