--- a/deployment/demo/values.yaml
+++ b/deployment/demo/values.yaml
@@ -14,30 +14,39 @@ averageCPUUtilization: 50
 averageMemoryUtilization: 50
 
 webappContainerService:
-  type: ClusterIP  # {{ .Values.webappContainerService.type }}
-  port: 3000       # {{ .Values.webappContainerService.port }}
+  type: ClusterIP
+  port: 3000
 
 katanaContainerService:
-  type: ClusterIP  # {{ .Values.katanaContainerService.type }}
-  port: 5050       # {{ .Values.katanaContainerService.port }}
+  type: ClusterIP
+  port: 5050
 
 toriiContainerService:
-  type: ClusterIP  # {{ .Values.toriiContainerService.type }}
-  port: 8080       # {{ .Values.toriiContainerService.port }}
+  type: ClusterIP
+  port: 8080
 
 grpcToriiContainerService:
-  type: ClusterIP  # {{ .Values.grpcToriiContainerService.type }}
-  port: 50051      # {{ .Values.grpcToriiContainerService.port }}
+  type: ClusterIP
+  port: 50051
 
 
-domainName: pixelaw.xyz                # {{ .Values.domainName }}
+domainName: pixelaw.xyz
 
 subDomainName:
-  pixelaw: demo                     # {{ .Values.subDomainName.pixelaw }}
-  katana: katana.demo           # {{ .Values.subDomainName.katana }}
-  torii: torii.demo             # {{ .Values.subDomainName.torii }}
-  grpcTorii: grpc.demo    # {{ .Values.subDomainName.grpcTorii }}
+  pixelaw: demo
+  katana: katana.demo
+  torii: torii.demo
+  grpcTorii: grpc.demo
 
 dockerImage: ghcr.io/pixelaw/core:latest
 
-worldAddress: "0x47864d08a1b86cf0dd52ea2785f8bc93b5f48edca8380bbb3057d158521e12d"
+worldAddress: "0x6395ccab8983e6598b8d54bac18cadb63d04b8e4631bde418a2cfb504b59a89"
+
+webapp:
+  katanaUrl: "https://api.cartridge.gg/x/pixelaw1/katana"
+  toriiUrl: "https://api.cartridge.gg/x/pixelaw1/torii"
+  katanaSlotUrl: "https://api.cartridge.gg/x/pixelaw1/katana"
+  toriiSlotUrl: "https://api.cartridge.gg/x/pixelaw1/torii"
+  seed: "7380699824140797174"
+  totalAccounts: "4"
+
